--- a/client/src/Nav.css
+++ b/client/src/Nav.css
@@ -1,6 +1,7 @@
 .link {
   font-size: larger;
-  padding: 1rem;
+  /* padding: 1rem; */
+  display: flex;
 }
 
 .link:hover {
@@ -29,4 +30,5 @@ a {
   text-decoration: none;
   font-weight: bold;
   color: black;
+  padding: 1rem;
 }
