--- a/client/src/Nav.css
+++ b/client/src/Nav.css
@@ -1,6 +1,5 @@
 .link {
   font-size: larger;
-  /* padding: 1rem; */
   display: flex;
 }
 
@@ -19,7 +18,7 @@
 nav {
   width: 100%;
   display: flex;
-  position: sticky;
+  /* position: sticky; */
   top: 0px;
   justify-content: center;
   border-bottom: 1px solid grey;
