--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -19,12 +19,9 @@ h2 {
   font-size: 25pt;
 }
 
-.big {
-  height: 200vh;
-}
-
 .itemsWrapper {
   display: flex;
-  justify-content: flex-start;
   width: 90%;
+  flex-wrap: wrap;
+  border: 1px solid rgba(128, 128, 128, 0.5);
 }
