--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,14 @@
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: rgb(251, 245, 238);
+}
+
+h3,
+p,
+span {
+  margin-left: 0.5rem;
 }
