--- a/client/src/Home.css
+++ b/client/src/Home.css
@@ -1,11 +1,12 @@
 .carousel {
   height: 500px;
   width: 100%;
-  border: 3px solid black;
+  border: 1px solid grey;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: larger;
+  background-color: white;
 }
 
 .wrapper {
@@ -24,4 +25,5 @@ h2 {
   width: 90%;
   flex-wrap: wrap;
   border: 1px solid rgba(128, 128, 128, 0.5);
+  margin-bottom: 10rem;
 }
