--- a/client/src/Nav.css
+++ b/client/src/Nav.css
@@ -18,11 +18,11 @@
 nav {
   width: 100%;
   display: flex;
-  /* position: sticky; */
   top: 0px;
   justify-content: center;
   border-bottom: 1px solid grey;
   margin-bottom: 1rem;
+  background-color: rgb(156, 79, 56);
 }
 
 a {
