--- a/client/src/Searchbar.css
+++ b/client/src/Searchbar.css
@@ -17,9 +17,11 @@
 .searchDropdown {
   flex-grow: 0;
   border-radius: 5px 0 0 5px;
+  cursor: pointer;
 }
 
 .searchBtn {
   flex-grow: 0;
   border-radius: 0 5px 5px 0;
+  cursor: pointer;
 }
