cart info, show item info in progress

--- a/client/src/ItemCard.css
+++ b/client/src/ItemCard.css
@@ -31,12 +31,25 @@
   height: 70%;
 }
 
-.selected {
+.showInfo {
   width: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border: 1px solid rgba(128, 128, 128, 0.5);
 }
 
-.selected .imgWrapper {
+.showInfo .imgWrapper {
   width: 25%;
+}
+
+.cartBtn {
+  height: 70px;
+  width: 70px;
+  border-radius: 50%;
+  border: none;
+  font-size: 26pt;
+}
+
+.cartBtn:hover,
+.added {
+  background-color: aquamarine;
 }
