--- a/client/src/ItemCard.css
+++ b/client/src/ItemCard.css
@@ -3,9 +3,10 @@
   width: 25%;
   height: 40vw;
   background-color: white;
+  display: flex;
 }
 
-.itemWrapper > h3 {
+.itemWrapper h3 {
   white-space: nowrap;
   overflow: hidden;
   margin-right: 0.5rem;
@@ -14,7 +15,6 @@
 .itemWrapper:hover {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border: 1px solid rgba(128, 128, 128, 0.5);
-  cursor: pointer;
   z-index: 9;
 }
 
@@ -37,9 +37,9 @@
   border: 1px solid rgba(128, 128, 128, 0.5);
 }
 
-.showInfo .imgWrapper {
+/* .showInfo .imgWrapper {
   width: 25%;
-}
+} */
 
 .cartBtn {
   height: 70px;
@@ -52,4 +52,8 @@
 .cartBtn:hover,
 .added {
   background-color: aquamarine;
+}
+
+.reviewWrapper {
+  display: flex;
 }
