--- a/client/src/Nav.css
+++ b/client/src/Nav.css
@@ -1,10 +1,12 @@
 .link {
   font-size: larger;
   display: flex;
+  border-radius: 10px;
 }
 
 .link:hover {
-  background-color: rgb(244, 238, 231);
+  background-color: rgb(251, 234, 213);
+  transition: 0.3s;
 }
 
 .navContent {
@@ -18,11 +20,8 @@
 nav {
   width: 100%;
   display: flex;
-  top: 0px;
   justify-content: center;
-  border-bottom: 1px solid grey;
-  margin-bottom: 1rem;
-  background-color: rgb(156, 79, 56);
+  background-color: rgb(251, 202, 153);
 }
 
 a {
