--- a/client/src/Searchbar.css
+++ b/client/src/Searchbar.css
@@ -4,13 +4,18 @@
   margin: 0.5rem 1rem;
 }
 
+.searchbar:hover {
+  background-color: rgb(255, 240, 224);
+  transition: 0.3s;
+}
+
 .searchbar {
-  border: 1px solid grey;
+  border: 1px solid black;
   font-size: larger;
   flex-grow: 1;
   outline: 0;
   padding-left: 0.5rem;
-  background-color: rgb(255, 249, 240);
+  background-color: rgb(251, 234, 213);
   height: 50px;
 }
 
