--- a/client/src/Account.css
+++ b/client/src/Account.css
@@ -1,3 +1,5 @@
+
+
 .accountWrapper > div {
   display: flex;
   align-items: center;
@@ -8,10 +10,17 @@
 .accountWrapper div > div {
   display: flex;
   flex-direction: column;
+  background-image: url(https://media4.giphy.com/media/JoVV55m3KZHdxlpFZ6/giphy.gif?cid=ecf05e47z3vz8buneyfzyctbusvjf24njwevx0y6a17cvnve&rid=giphy.gif);
+  color: white;
   background-color: rgb(169, 74, 26);
 }
 
 .login {
   width: 20vw;
   margin: 0.5rem;
+}
+
+.sign_in{
+  text-align: center;
+  
 }
