--- a/client/src/Nav.css
+++ b/client/src/Nav.css
@@ -1,3 +1,5 @@
+
+
 .link {
   font-size: larger;
   display: flex;
@@ -5,11 +7,12 @@
 }
 
 .link:hover {
-  background-color: rgb(251, 234, 213);
+  background-color: gray;
   transition: 0.3s;
 }
 
 .navContent {
+
   list-style-type: none;
   width: 100%;
   margin: 0.5rem 5rem;
@@ -21,12 +24,13 @@ nav {
   width: 100%;
   display: flex;
   justify-content: center;
-  background-color: rgb(251, 202, 153);
+  background-image: url(https://media4.giphy.com/media/JoVV55m3KZHdxlpFZ6/giphy.gif?cid=ecf05e47z3vz8buneyfzyctbusvjf24njwevx0y6a17cvnve&rid=giphy.gif);
 }
 
 a {
   text-decoration: none;
   font-weight: bold;
-  color: black;
+  color: white;
   padding: 1rem;
 }
+
