--- a/client/src/Searchbar.css
+++ b/client/src/Searchbar.css
@@ -5,7 +5,7 @@
 }
 
 .searchbar:hover {
-  background-color: rgb(255, 240, 224);
+  background-color: gray;
   transition: 0.3s;
 }
 
@@ -15,7 +15,7 @@
   flex-grow: 1;
   outline: 0;
   padding-left: 0.5rem;
-  background-color: rgb(251, 234, 213);
+  background-color: white;
   height: 50px;
 }
 
